--- a/RealmsVK/RealmsVK.vcxproj
+++ b/RealmsVK/RealmsVK.vcxproj
@@ -195,9 +195,11 @@
     <ClCompile Include="Module\GUI\IWidget.cpp" />
     <ClCompile Include="Module\GUI\Layer.cpp" />
     <ClCompile Include="Module\GUI\UIConstraint.cpp" />
+    <ClCompile Include="Module\Input\AssignDictionnary.cpp" />
     <ClCompile Include="Module\Input\AssignSanitizer.cpp" />
     <ClCompile Include="Module\Input\Input.cpp" />
-    <ClCompile Include="Module\Input\InputAssignement.cpp" />
+    <ClCompile Include="Module\Input\InputException.cpp" />
+    <ClCompile Include="Module\Input\InputType.cpp" />
     <ClCompile Include="Module\Input\InputManager.cpp" />
     <ClCompile Include="Module\Input\InputMap.cpp" />
     <ClCompile Include="Module\LuaBindings\Attribute.cpp" />
@@ -248,6 +250,7 @@
     <ClInclude Include="Base\Math\Vec3.h" />
     <ClInclude Include="Base\Math\VoxelMath.h" />
     <ClInclude Include="Base\Exception.h" />
+    <ClInclude Include="Base\Statistics.h" />
     <ClInclude Include="Base\Timer\ApplicationTime.h" />
     <ClInclude Include="Base\Timer\ITimer.h" />
     <ClInclude Include="Base\Timer\TimeFormat.h" />
@@ -299,9 +302,12 @@
     <ClInclude Include="Module\GUI\IWidget.h" />
     <ClInclude Include="Module\GUI\Layer.h" />
     <ClInclude Include="Module\GUI\UIConstraint.h" />
+    <ClInclude Include="Module\Input\AssignAddress.h" />
+    <ClInclude Include="Module\Input\AssignDictionnary.h" />
     <ClInclude Include="Module\Input\AssignSanitizer.h" />
     <ClInclude Include="Module\Input\Input.h" />
-    <ClInclude Include="Module\Input\InputAssignement.h" />
+    <ClInclude Include="Module\Input\InputException.h" />
+    <ClInclude Include="Module\Input\InputType.h" />
     <ClInclude Include="Module\Input\InputManager.h" />
     <ClInclude Include="Module\Input\InputMap.h" />
     <ClInclude Include="Module\LuaBindings\Attribute.h" />
